whoami/whoami-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: whoami
