whoami/whoami-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: 'whoami.heemels.net'
  name: whoami-ingress
  namespace: dev
spec:
  rules:
  - host: 'whoami.heemels.net'
    http:
      paths:
      - path: /whoami
        backend:
          serviceName: whoami
          servicePort: 80
